@@ -35,7 +35,7 @@ Vue.component('lms-groupvolume', {
     <v-flex xs12>
      <v-layout>
       <v-btn flat icon class="vol-btn vol-left" @click="adjustVolume(player, false)"><v-icon>{{player.muted ? 'volume_off' : 'volume_down'}}</v-icon></v-btn>
-      <v-slider :disabled="!player.dvc" @change="volumeChanged(player)" step="1" v-model="player.volume" class="vol-slider" v-bind:class="{'dimmed': !player.ison}"></v-slider>
+      <v-slider :disabled="!player.dvc" @change="volumeChanged(player)" @wheel.native="volWheel(player, $event)"  step="1" v-model="player.volume" class="vol-slider" v-bind:class="{'dimmed': !player.ison}"></v-slider>
       <v-btn flat icon @click="adjustVolume(player, true)" class="vol-btn vol-right"><v-icon>{{player.muted ? 'volume_off' : 'volume_up'}}</v-icon></v-btn>
      </v-layout>
     </v-flex>
@@ -182,6 +182,13 @@ Vue.component('lms-groupvolume', {
                 player.volume = vol;
                 player.muted = vol<0;
             });
+        },
+        volWheel(player, event) {
+            if (event.deltaY<0) {
+                this.adjustVolume(player, true);
+            } else if (event.deltaY>0) {
+                this.adjustVolume(player, false);
+            }
         },
         toggleMute(player) {
             lmsCommand(player.id, ['mixer', 'muting', player.muted ? 0 : 1]).then(({data}) => {
